--- a/package.json
+++ b/package.json
@@ -3,21 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@djpfs/react-vlibras": "^1.0.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "firebase": "^8.6.7",
+    "formik": "^2.2.9",
     "i": "^0.3.6",
+    "jwt-decode": "^3.1.2",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.5.0",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-hook-form": "^7.9.0",
+    "react-iframe": "^1.8.0",
+    "react-image": "^4.0.3",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "react-simple-chatbot": "^0.6.1",
     "reactfire": "^3.0.0-rc.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.35.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
