--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-iframe": "^1.8.0",
     "react-image": "^4.0.3",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-simple-chatbot": "^0.6.1",
